<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
	http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.basis.components</groupId>
	<artifactId>basiscomponents</artifactId>

	<!-- Output to jar format -->
	<packaging>jar</packaging>

	<version>1.0-SNAPSHOT</version>
	<name>components</name>

	<properties>
		<destDir>javadoc</destDir>
		<doctitle>Components</doctitle>
		<project-root>${basedir}</project-root>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>dd-MM-yyyy HH:mm</maven.build.timestamp.format>
	</properties>

	<profiles>

		<!-- BASIS build profile -->
		<profile>
			<id>basisbuild</id>
			<activation>
				<property>
					<name>basisbuild</name>
					<value>true</value>
				</property>
			</activation>

			<properties>
				<jar-directory>/mnt/jenkins/workspace/Basis_19.02_Components/components/jars</jar-directory>
				<reportOutputDirectory>/mnt/jenkins/workspace/Basis_19.02_Components/components</reportOutputDirectory>
			</properties>
		</profile>

		<!-- default build profile, active by default -->
		<profile>
			<id>winbbjlib</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>

			<properties>
				<jar-directory>C:/bbj/lib</jar-directory>
			</properties>
		</profile>
		<profile>
			<id>unixbbjlib</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<jar-directory>/opt/bbj/lib</jar-directory>
			</properties>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>BBj.jar</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${jar-directory}/BBj.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>BBjJDBC.jar</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${jar-directory}/BBjJDBC.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>BBjThinClient.jar</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${jar-directory}/BBjThinClient.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>BBjUtil.jar</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${jar-directory}/BBjUtil.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>lucene-core.jar</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${jar-directory}/lucene-core-5.2.1.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>lucene-queryparser.jar</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${jar-directory}/lucene-queryparser-5.2.1.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>lucene-facet.jar</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${jar-directory}/lucene-facet-5.2.1.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>lucene-analyzers-common.jar</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${jar-directory}/lucene-analyzers-common-5.2.1.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>jackson.jar</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${jar-directory}/jackson-all-2.9.4.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>gson.jar</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${jar-directory}/gson-2.3.1.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>org.apache</groupId>
			<artifactId>commons-lang.jar</artifactId>
			<version>3.8.1</version>
			<scope>system</scope>
			<systemPath>${jar-directory}/commons-lang3-3.8.1.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>BBjFilesystem.jar</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${jar-directory}/BBjFilesystem.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>poi.jar</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${jar-directory}/poi-4.1.0.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>poi-excelant.jar</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${jar-directory}/poi-excelant-4.1.0.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.basis.lib</groupId>
			<artifactId>poi-ooxml.jar</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${jar-directory}/poi-ooxml-4.1.0.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.basis</groupId>
			<artifactId>BuildVersionGenerator</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project-root}/src/main/resources/build/BuildVersionGenerator.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.basis</groupId>
			<artifactId>netty</artifactId>
			<version>1.0</version>
			<scope>system</scope>
                        <systemPath>${jar-directory}/netty-all-4.1.22.Final.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
			<version>6.6.0</version>
			<scope>system</scope>
			<systemPath>${jar-directory}/jasperreports-javaflow-6.8.0.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<finalName>basiscomponents</finalName>
		<plugins>
			<!-- Set a JDK compiler level -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<!-- Set the jar output Directory -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<outputDirectory>target/lib/</outputDirectory>
				</configuration>
			</plugin>

			<!-- Generating the VersionInfo.java and the build.info files -->
			<plugin>
				<artifactId>exec-maven-plugin</artifactId>
				<groupId>org.codehaus.mojo</groupId>
				<version>1.5.0</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>java</goal>
						</goals>
						<configuration>
							<classpathScope>system</classpathScope>
							<includeProjectDependencies>true</includeProjectDependencies>
							<includePluginDependencies>true</includePluginDependencies>
							<mainClass>com.basis.buildversiongenerator.BuildVersionGenerator</mainClass>
							<arguments>
								<argument>${jar-directory}/BBjUtil.jar</argument>
								<argument>${basedir}</argument>
								<argument>${basedir}/src/main/resources/build/build.properties</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<configuration>
					<footer>${maven.build.timestamp}</footer>
					<failOnError>false</failOnError>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
			</plugin>

		</plugins>

	</build>

</project>
